# dcf77-clock

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  clock_manager.c  clock_manager.h  communication_manager.c  communication_manager.h  event.c  event.h  main.c  radio_manager.c  radio_manager.h  ui_manager.c  ui_manager.h
docs/: user_manual.md
hal/: CMakeLists.txt
hal/drivers/: CMakeLists.txt  core.c  core.h  exti.c  exti.h  gpio.c  gpio.h  timer.c  timer.h  twi.c  twi.h  usart.c  usart.h  wdg.c  wdg.h
hal/ext_drivers/: CMakeLists.txt  button.c  button.h  buzzer.c  buzzer.h  ds1307.c  ds1307.h  hd44780.c  hd44780.h  mas6181b.c  mas6181b.h  rotary_encoder.c  rotary_encoder.h
hal/startup/: CMakeLists.txt  toolchain_avr8.cmake
middlewares/: CMakeLists.txt
middlewares/libs/: CMakeLists.txt  dcf77_decoder.c  dcf77_decoder.h  simple_stdio.c  simple_stdio.h
